fix alignment on dropdown search - fixes #124

--- a/client/styles/app.less
+++ b/client/styles/app.less
@@ -190,7 +190,6 @@ body {
 }
 
 #dropdown-search input {
-	text-align: center;
 	margin: 0 auto;
 }	
 
